Enhance provider configuration and processing logic to support extra parameters for improved functionality

--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,14 @@
 providers:
-  - name: siliconflow
-    base_url: https://api.siliconflow.cn/v1
-    model: Qwen/Qwen3-8B
-    enabled: true
-    
   - name: alibaba
     base_url: https://dashscope.aliyuncs.com/compatible-mode/v1
     model: qwen3-8b
+    enabled: true
+    extra_params:
+      enable_thinking: false
+      
+  - name: siliconflow
+    base_url: https://api.siliconflow.cn/v1
+    model: Qwen/Qwen3-8B
     enabled: true
 
 processing:
