--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,11 @@ providers:
     model: Qwen/Qwen3-8B
     enabled: true
     proxy: null
+    
+  - name: openrouter
+    base_url: https://openrouter.ai/api/v1
+    model: qwen/qwen3-8b
+    enabled: true
 
 processing:
   prompt: |
